Hans Christian Andersen (hca på dk prik ibm prik com) fangede en tyrkfjel.

--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -78,7 +78,7 @@ IBM har noget kommercielt, og ellers er der <a href="http://quanta.sourceforge.n
 <li>Skriv om clustering : <a href="http://www.mosix.org">Mosix</a> og <a href="http://www.linuxvirtualserver.org">Linux virtual server</a></li>
 <li>Skriv om <a href="http://www.kaybee.org/~kirk/html/linux.html">AutoRPM</a></li>
 <li>Skriv om netovervågning med Big Brother, Netsaint osv.</li>
-<li>Skriv om <a href="http://libre.act-europe.fr/gvd">GCD</a></li>
+<li>Skriv om <a href="http://libre.act-europe.fr/gvd">GVD</a></li>
 <li>
 Er der ikke nogen af Jer som har lyst til at skrive om
 3D grafik; Se f.eks. <a href="http://www.linux.com/newsitem.phtml?sid=1&aid=11335">her</a></li>
