Bøgerne er altså skrevet på dansk.

--- a/program/palm/home.html
+++ b/program/palm/home.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html 
      PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "DTD/xhtml1-strict.dtd">
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="da" xml:lang="da" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Linux - Friheden til at programmere</title>
   </head>
@@ -19,7 +19,7 @@
     </ul>
 
 <p>
-Bogen kan også læses på adressen <tt>http://www.sslug.dk/linuxbog<tt>
+Bogen kan også læses på adressen <tt>http://www.sslug.dk/linuxbog/<tt>
 </p>
 <p>
 Fejl og mangler bedes tilsendt til <tt>linuxbog@sslug.dk</tt> eller
