Rettet to småfejl i læsevejledningen.

--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -16,7 +16,7 @@
 
     <h1>Forskellige veje igennem Friheden til at vælge-bøgerne</h1>
 
-    <p>For at lette vejen igennem de mange bøger, er der tre interesse man
+    <p>For at lette vejen igennem de mange bøger, er der fem interesser man
     kunne tænke sig læseren har:</p>
 
     <ul>
@@ -36,7 +36,7 @@
       alle detaljer</a></li>
     </ul>
 
-    <p>Klik på linket for at komme til en anbefalet læse-vejledning</p>
+    <p>Klik på linket for at komme til en anbefalet læsevejledning</p>
     <hr>
 
     <h1>Læsevejledning til læsevejledningen</h1>
