Anders Kaas Petersen fandt dødt link

--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -81,7 +81,7 @@ IBM har noget kommercielt, og ellers er der <a href="http://quanta.sourceforge.n
 <li>Skriv om <a href="http://libre.act-europe.fr/gvd">GVD</a></li>
 <li>
 Er der ikke nogen af Jer som har lyst til at skrive om
-3D grafik; Se f.eks. <a href="http://www.linux.com/newsitem.phtml?sid=1&aid=11335">her</a></li>
+3D grafik</li>
 <li>Afsnit om systemovervågning - big brother, big sister osv.</li>
 <li>Afsnit om at droppe sendmail til fordel for qmail til admin bogen</li>
 <li>Afsnit om qmail og ezmlm (liste-manager til qmail).</li>
