--- a/signatur/todo.html
+++ b/signatur/todo.html
@@ -16,7 +16,18 @@
 <h2>Liste over ting du meget gerne må skrive om</h2>
 
 <ul>
-<li>Kontakt Mads Dydensborg om dette</li>
+<li>Kontakt Mads Bondo Dydensborg &lt;madsdyd@challenge.dk&gt; om dette.</li>
+
+<li>Mads: Hans Schou har på et tidspunkt sendt mig nogen billeder der
+dokumenterer installation af KMD-CA rodcertifikat under Mozilla. De
+skal ind.</li>
+
+<li>Der mangler beskrivelser af hvordan man gør med f.eks. Netscape,
+Mozilla og Galeon.</li>
+
+<li>KDE 3 dok skal færdiggøres.</li>
+
+<li>Upload skal endeligt dokumenteres.</li>
 
 </ul>
 
