Mads skal skrive om dpi i bilelder

--- a/dokumentation/todo.html
+++ b/dokumentation/todo.html
@@ -25,7 +25,11 @@
       <li>Der mangler stadig mange ordforklaringer</li>
 
       <li>Det ville være godt med markering i SGML-filerne af flere stikord.
-      Kontakt Peter Toft pto@sslug.dk hvis du vil hjælpe med dette</li>
+      Kontakt Peter Toft pto@sslug.dk hvis du vil hjælpe med
+      dette</li>
+
+      <li>Mads Bondo Dydensborg skal tilføje et afsnit om opløsning i
+      billeder under docbook. Se http://www.sslug.dk/emailarkiv/bog/2002_07/msg00133.html</li>
     </ul>
     <!-- Text slut -->
     <!--#include virtual="/includes/bottom.html" -->
