--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -20,17 +20,12 @@
     kunne tænke sig læseren har:</p>
 
     <ul>
-      <li><a href="#bruge-Linux">Jeg vil lære at bruge en
-      Linuxmaskine</a></li>
 
-      <li><a href="#styre-Linux">Jeg vil lære at styre en
+      <li><a href="#styre-Linux">Jeg vil lære at installere og styre en
       Linuxmaskine</a></li>
 
       <li><a href="#programmere-Linux">Jeg vil lære at programmere på en
       Linuxmaskine</a></li>
-
-      <li><a href="#IT-strategi">Jeg skal til at vælge IT-strategi - hvad er
-      Linux?</a></li>
 
       <li><a href="#Linux-bruger">Jeg vil kunne bruge en Linuxmaskine uden
       alle detaljer</a></li>
@@ -45,36 +40,19 @@
     muligheder. Du er naturligvis altid velkommen til at gå tilbage og
     genlæse en af bøgerne eller følge en anden vej.</p>
 
-    <h1><a name="bruge-Linux">Jeg vil lære at bruge en Linuxmaskine</a></h1>
+    
+    <h1><a name="styre-Linux">Jeg vil lære at installere og styre en Linuxmaskine</a></h1>
     <a href="friheden"><font face="Courier New,Courier">friheden</font></a> 
-
-    <p>- Installation, styring og de basale dele af UNIX gennemgås.<br>
-     <font face="Courier New,Courier">\---&gt;<a href=
-    "applikationer">applikationer</a></font> - Grafiske programmer til
-    Linux.<br>
-     <font face=
-    "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a href=
-    "signatur">Digital underskrift</a></font> - Om at bruge digitale
-    underskrifter.<br>
-     <font face=
-    "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
-     href="dokumentation">Dokumentation</a></font> - Nu skal du sørge for at
-    alle dine erfaringer ikke går tabt.</p>
-    <hr>
-
-    <h1><a name="styre-Linux">Jeg vil lære at styre en Linuxmaskine</a></h1>
-    <a href="friheden"><font face="Courier New,Courier">friheden</font></a> 
-
-    <p>- Installation af Linux.<br>
+    - Installation af Linux.<br>
      <font face="Courier New,Courier">\---&gt;<a href="unix">unix</a></font>
     - Styring af Linux og de basale dele af UNIX gennemgås.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---&gt;<a href=
-    "admin">Admin</a></font> - Bogen for dig som skal lave en server for
+    "admin">admin</a></font> - Bogen for dig som skal lave en server for
     netværket.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---&gt;<a
-     href="sikkerhed">Sikkerhed</a></font> - Med en maskine på Internet
+     href="sikkerhed">sikkerhed</a></font> - Med en maskine på Internet
     bliver du nødt til at vide noget om sikkerhed<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---&gt;<a
@@ -82,10 +60,13 @@
     webserver.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
-     href="sikkerhed">Sikkerhed</a></font> - Kan ikke læses for tit hvis du
+     href="sikkerhed">sikkerhed</a></font> - Kan ikke læses for tit hvis du
     har en maskine på nettet!<br>
      <font face=
-    "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
+    "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
+     href="signatur">signatur</a></font> - vil du kommunikere sikkert så sker dette med digital signatur.<br>
+     <font face=
+    "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
      href="dokumentation">Dokumentation</a></font> - Nu skal du sørge for at
     alle dine erfaringer ikke går tabt.</p>
     <hr>
@@ -93,8 +74,7 @@
     <h1><a name="programmere-Linux">Jeg vil bruge min Linuxmaskine til at
     programmere</a></h1>
     <a href="friheden"><font face="Courier New,Courier">friheden</font></a> 
-
-    <p>- Installation af Linux.<br>
+    - Installation af Linux.<br>
      <font face="Courier New,Courier">\---&gt;<a href="unix">unix</a></font>
     - Styring af Linux og de basale dele af UNIX gennemgås.<br>
      <font face=
@@ -102,25 +82,11 @@
     "program">program</a></font> - Introduktion til forskellige
     programmeringssprog under Linux.<br>
      <font face=
-    "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---&gt;
-    <a href="c">c</a></font> - Programmering i C.<br>
+    "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+     \---&gt;<a href="c">c</a></font> - Programmering i C.<br>
      <font face=
-    "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---&gt;
-    <a href="c">Java</a></font> - Programmering i Java.</p>
-    <hr>
-
-    <h1><a name="IT-strategi">Jeg skal til at vælge IT-platform</a></h1>
-    <a href="itplatform"><font face=
-    "Courier New,Courier">itplatform</font></a> 
-
-    <p>- Giver oversigten uden at gå i tekniske detaljer.<br>
-     <font face="Courier New,Courier">\---&gt;<a href=
-    "applikationer">applikationer</a></font> - Præsenterer en masse grafiske
-    programmer til Linux<br>
-     <font face=
-    "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a href=
-    "friheden">friheden</a></font> - Fortsæt derefter i begynder-bogen hvis
-    du vil vide mere om det tekniske indhold.</p>
+    "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    \---&gt;<a href="c">Java</a></font> - Programmering i Java.</p>
     <hr>
 
     <h1><a name="Linux-bruger">Jeg vil kunne bruge en Linuxmaskine uden alle
@@ -129,11 +95,13 @@
     <h4>(Hjælp - Chefen siger vi skal køre Linux)</h4>
     <a href="kontorbruger"><font face=
     "Courier New,Courier">kontorbruger</font></a> 
-
-    <p>- Hjælper dig til at få lavet noget arbejde.<br>
+    - Hjælper dig til at få lavet noget arbejde.<br>
      <font face="Courier New,Courier">\---&gt;<a href=
     "applikationer">applikationer</a></font> - præsenterer en masse grafiske
     programmer til Linux<br>
+     <font face=
+    "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
+     href="signatur">signatur</a></font> - vil du kommunikere sikkert så sker dette med digital signatur.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a href=
     "unix">unix</a></font> - Fortsæt derefter i begynder-bogen hvis du vil
