Der er altid noget som skal laves om

--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -46,6 +46,9 @@
     SGML-variant. Det minder en hel del om HTML, dvs. er tekstbaseret. Du kan
     læse mere om DocBook på <a href=
     "http://www.sslug.dk/linuxbog/dokumentation/bog/">http://www.sslug.dk/linuxbog/dokumentation/bog/</a>.</p>
+     
+    <p>Vi har forslag til 
+    <a href="http://cvs.sslug.dk/linuxbog/?t=TODO">hvad der skal laves</a>.</li>
 
     <p>Har du fundet noget som skal laves op, så er det følgende det bedste
     du kan gøre:</p>
