Småændringer og todo.html udfyldt med ideer

--- a/sikkerhed/todo.html
+++ b/sikkerhed/todo.html
@@ -20,7 +20,18 @@
     <h2>Liste over ting du meget gerne må skrive om</h2>
 
     <ul>
-      <li>Intrusion detection!!!</li>
+      <li>Intrusion detection!!!<br>
+http://www.chkrootkit.org/<br>
+http://linux.oreillynet.com/pub/a/linux/2002/02/07/rootkits.html?page=2<br>
+http://linux.oreillynet.com/pub/a/linux/2001/12/14/rootkit.html
+</li>
+<li>http://mercury.chem.pitt.edu/~tiho/LinuxFocus/English/January2002/article225.shtml</li>
+<li>http://www.lids.org/about.html</li>
+<li>http://www.kuro5hin.org/story/2001/10/26/204645/29</li>
+<li>http://www.linuxsecurity.com/feature_stories/dsniff-monitoring.html</li>
+<li>Post Mortem: http://securityportal.com/buffy/buffy20010426.html</li>
+<li>Skriv om Nessus</li>
+<li>Crack i praksis http://hispahack.ccc.de/en/mi019en.htm</li>
     </ul>
     <!-- Text slut -->
     <!--#include virtual="/includes/bottom.html" -->
