--- a/admin/todo.html
+++ b/admin/todo.html
@@ -29,8 +29,23 @@
 
       <li>Skriv om netovervågning med Big Brother, Nagios</li>
 
+      <li>
+       Er det muligt at logge hvor meget
+       cpu-tid den enkelt bruger benytter, på min linux box?
+      <br>
+       Skriv om GNU acct installeret, findes som pakken acct på Debian. Der
+       efter er kommandoerne ac, accton, lastcomm og sa.
+       </li>
+
       <li>Afsnit om at droppe sendmail til fordel for qmail til admin
       bogen</li>
+
+      <li>skriv om dig som alternativ til nslookup</li>
+      <li>pconsole: http://www.heiho.net/pconsole/
+      Do it now. Open as many remote xterms and enter the commands just once.
+      Configure multiple systems which need the same commands just typing them
+      once.</li>
+
 
       <li>Afsnit om qmail og ezmlm (liste-manager til qmail).</li>
 
