--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -31,8 +31,28 @@ vil være guld.</li>
 <li>Det ville være godt med markering i SGML-filerne af flere
 stikord. Kontakt Peter Toft pto@sslug.dk hvis du vil hjælpe med dette</li>
 </li>
+<li>Michael Rasmussen mener at vi bør se på
+http://www.karubik.de/gig</li>
+<li>Linux for kids har både spil og lærer redskaber.
+http://linuxforkids.com/
+</li>
 
-
+<li>et godt program til at læse post via en
+webserver !!! -)
+Måske nwebmail ? http://nwebmail.sourceforge.net/
+eller 
+IMP http://horde.org/imp/
+og Jawmail http://jawmail.sourceforge.net/
+</li>
+<li>aspell:
+<pre>
+#!/bin/sh
+echo "Vælg ordbog (enter for dansk): "
+ls /usr/lib/aspell
+read ordbog
+exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
+</pre>
+</li>
 
 <li>Programmer der skal beskrives, lyd ting:
 <ul>
