--- a/friheden/todo.html
+++ b/friheden/todo.html
@@ -22,6 +22,8 @@
     <ul>
       <li>Installationsvejledning til nyeste Debian - skal i "friheden".</li>
 
+<li>Skriv om lspci -v</li>
+
       <li>Generel bedre understøttelse af Debian - i alle bøger.</li>
 
       <li>Bedre intro til bøgerne - generelt.</li>
