Alternativ til BIND

--- a/admin/todo.html
+++ b/admin/todo.html
@@ -41,6 +41,8 @@
       bogen</li>
 
       <li>skriv om dig som alternativ til nslookup</li>
+ 
+      <li>Skriv om alternativ til BIND - http://cr.yp.to/djbdns/install.html</li>
       <li>pconsole: http://www.heiho.net/pconsole/
       Do it now. Open as many remote xterms and enter the commands just once.
       Configure multiple systems which need the same commands just typing them
