--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -84,6 +84,8 @@ dag. Beskrivelsen af hvad en window manager er kunne være meget bedre.</li>
 en window manager er.</li>
 <li>Der kunne være en strammere opdeling af window managere og
 skrivebordsmiljøer.</li>
+
+
 <li>Kapitlet om applikationer (kapitel 2) starter med et afsnit om
 programmeringsværktøjer. Ok, da. Det skal laves om. De programmer man
 må antage "almindelige mennesker" vil ønske at bruge mest skal
@@ -93,7 +95,25 @@ hvilke software grupper der findes og vi anvender fremover. Et
 eksempel: "3D-modellering" er under kapitel 2 - og, kapitel 6 hedder
 "lyd og billede". Hurra. :-) Umiddelbart ser det ud til at kapitel 6
 med fordel kunne flyttes op over det nuværende kapitel 4
-(emulatorer).</li>
+(emulatorer).<br>
+Forslag til ny struktur:<br>
+- Kapitel 1, Introduktion til Linux's grafiske grænseflader
+- Kapitel 2, Webbrowsning, mail og kontorapplikationer
+- Kapitel 3, Tegneprogrammer og billedmanipulation
+- Kapitel 4, Lyd
+- Kapitel 5, Video og DVD
+- Kapitel 6, Brænding af CD'er
+- Kapitel 7, Spil
+- Kapitel 8, Emulatorer
+- Kapitel 9, Diverse programmer
+
+Materiale fra de eksisterende kapitler vil blive flyttet
+rundt/genbrugt. Klart forældede ting vil blive høvlet ud.
+</li>
+
+
+
+
 <li>Alt om staroffice og openoffice skal gennemgås. Nye officesuiter
 skal tilføjes. (koffice, andre?)</li>
 <li>Frozen bobble og andre SDL spil skal med i afsnittet om
