--- a/licens/vaerker.html
+++ b/licens/vaerker.html
@@ -16,6 +16,8 @@
 
 
 <ul>
+<li><a href="javabog.dk">Objektorienteret programmering i Java</a> af 
+Jacob Nordfalk</li>
 <li>
 <a href="http://debianguiden.dk/">Debianguiden</a> er en bog om Debian</li>
 <li>Frit Firewall-kursus <a href="http://www.chbs.dk/kurser/firewall">http://www.chbs.dk/kurser/firewall</a></li>
