link til artikel

--- a/sikkerhed/todo.html
+++ b/sikkerhed/todo.html
@@ -32,6 +32,7 @@ http://linux.oreillynet.com/pub/a/linux/2001/12/14/rootkit.html
 <li>Post Mortem: http://securityportal.com/buffy/buffy20010426.html</li>
 <li>Skriv om Nessus</li>
 <li>Crack i praksis http://hispahack.ccc.de/en/mi019en.htm</li>
+<li>Snort osv http://www.linuxjournal.com/article.php?sid=6222</li>
     </ul>
     <!-- Text slut -->
     <!--#include virtual="/includes/bottom.html" -->
