--- a/licens/vaerker.html
+++ b/licens/vaerker.html
@@ -16,7 +16,7 @@
 
 
 <ul>
-<li><a href="javabog.dk">Objektorienteret programmering i Java</a> af 
+<li><a href="http://javabog.dk">Objektorienteret programmering i Java</a> af 
 Jacob Nordfalk</li>
 <li>
 <a href="http://debianguiden.dk/">Debianguiden</a> er en bog om Debian</li>
