Kim Schulz har bedt om en kritisk gennemgang af det som skrives.

--- a/admin/todo.html
+++ b/admin/todo.html
@@ -67,6 +67,9 @@
 
       <li>Det ville være godt med markering i SGML-filerne af flere stikord.
       Kontakt Peter Toft pto@sslug.dk hvis du vil hjælpe med dette</li>
+
+      <li>Kritisk gennemgang af det der skrives (kontakt: Kim Schulz
+      &lt;kim@sslug.dk&gt;)</li>
     </ul>
     <!-- Text slut -->
     <!--#include virtual="/includes/bottom.html" -->
