--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -137,6 +137,9 @@ til at starte med.</li>
 <li>Listen af spil skal opdateres
 
 
+
+      <li>Kritisk gennemgang af det der skrives (kontakt: Kim Schulz 
+      &lt;kim@sslug.dk&gt;)</li>
 </ul>
 
 <!-- Text slut -->
