--- a/dokumentation/todo.html
+++ b/dokumentation/todo.html
@@ -30,6 +30,9 @@
 
       <li>Mads Bondo Dydensborg skal tilføje et afsnit om opløsning i
       billeder under docbook. Se http://www.sslug.dk/emailarkiv/bog/2002_07/msg00133.html</li>
+
+      <li>Kritisk gennemgang af det der skrives (kontakt: Kim Schulz 
+      &lt;kim@sslug.dk&gt;)</li>
     </ul>
     <!-- Text slut -->
     <!--#include virtual="/includes/bottom.html" -->
