--- a/java/todo.html
+++ b/java/todo.html
@@ -21,6 +21,9 @@
 
     <ul>
       <li>Kontakt linuxbog@sslug.dk om dette.</li>
+
+      <li>Kritisk gennemgang af det der skrives (kontakt: Kim Schulz 
+      &lt;kim@sslug.dk&gt;)</li>
     </ul>
     <!-- Text slut -->
     <!--#include virtual="/includes/bottom.html" -->
