--- a/program/todo.html
+++ b/program/todo.html
@@ -28,6 +28,9 @@
 
       <li>Litteraturliste med henvisninger til bøger og andet materiale om
       sproget.</li>
+
+      <li>Kritisk gennemgang af det der skrives (kontakt: Kim Schulz 
+      &lt;kim@sslug.dk&gt;)</li>
     </ul>
 
     <p>Tilsvarende bør der for hvert værktøj vi omtaler principielt være
