--- a/kontorbruger/todo.html
+++ b/kontorbruger/todo.html
@@ -21,6 +21,9 @@
 
     <ul>
       <li>Skriv om en brugers anvendelse af kontorprogrammel.</li>
+
+      <li>Kritisk gennemgang af det der skrives (kontakt: Kim Schulz 
+      &lt;kim@sslug.dk&gt;)</li>
     </ul>
     <!-- Text slut -->
     <!--#include virtual="/includes/bottom.html" -->
