--- a/sikkerhed/todo.html
+++ b/sikkerhed/todo.html
@@ -33,6 +33,9 @@ http://linux.oreillynet.com/pub/a/linux/2001/12/14/rootkit.html
 <li>Skriv om Nessus</li>
 <li>Crack i praksis http://hispahack.ccc.de/en/mi019en.htm</li>
 <li>Snort osv http://www.linuxjournal.com/article.php?sid=6222</li>
+
+      <li>Kritisk gennemgang af det der skrives (kontakt: Kim Schulz 
+      &lt;kim@sslug.dk&gt;)</li>
     </ul>
     <!-- Text slut -->
     <!--#include virtual="/includes/bottom.html" -->
