Opdateret indhold en smule

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -125,7 +125,8 @@ afspillere først. Det vil sige sådan noget som xmms og KDE's
 medieafspiller, samt gnomes medieafspiller. Senere kan de mere
 specialiserede afspillere komme. Der er ingen grund til at vrøvle om
 gamle underlige X programmer der har meget begrænset funktionalitet
-til at starte med.</li>
+til at starte med. Indledningen til afsnittet om tegneprogrammer og
+grafikmanipulatorer skal skrives om. Skal det hedder grafikmanipulatorer?</li>
 <li></li>
 <li></li>
 
