Tilføjet indledning.sgml, opdateret todo.

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -16,130 +16,148 @@
 <h2>Liste over ting du meget gerne må skrive om</h2>
 
 <ul>
-<li>Skriv om <a href="http://www.gnomemeeting.org">Gnomemeeting</a> -
-konkurrent til MS Netmeeting</li>
-<li>Skriv noget om egnede programmer til at skrive hjemmesider i.
-IBM har noget kommercielt, og ellers er der <a href="http://quanta.sourceforge.net/">Quanta</a>, <a href="http://ftp.europeanservers.net/bluefish/downloads/?N=D">Bluefish</a></li>
-<li>
-Er der ikke nogen af Jer som har lyst til at skrive om
-3D grafik og seje spil</li>
-<li>Bedre intro til bøgerne - generelt.</li>
-<li>Der skal meget mere i "web"-bogen om Apache, 
-PHP og databaser. Eksempler som man nogenlunde nemt kan få i luften
-vil være guld.</li>
-<li>Der mangler stadig mange ordforklaringer</li>
-<li>Det ville være godt med markering i SGML-filerne af flere
-stikord. Kontakt Peter Toft pto@sslug.dk hvis du vil hjælpe med dette</li>
-</li>
-<li>Michael Rasmussen mener at vi bør se på
-http://www.karubik.de/gig</li>
-<li>Linux for kids har både spil og lærer redskaber.
-http://linuxforkids.com/
-</li>
 
-<li>et godt program til at læse post via en
-webserver !!! -)
-Måske nwebmail ? http://nwebmail.sourceforge.net/
-eller 
-IMP http://horde.org/imp/
-og Jawmail http://jawmail.sourceforge.net/
-</li>
-<li>aspell:
-<pre>
+
+<!-- ---------------------------- -->
+<li>Generelt<ul>
+
+  <li>Bedre indledning til bogen</li>
+  <li>Der mangler stadig mange ordforklaringer</li>
+  <li>Det ville være godt med markering i SGML-filerne af flere
+  stikord. Kontakt Peter Toft pto@sslug.dk hvis du vil hjælpe med dette</li>
+
+  <li>Michael Rasmussen mener at vi bør se på
+  http://www.karubik.de/gig - det er noget om installation under Gnome.</li>
+
+  <li>Kritisk gennemgang af det der skrives (kontakt: Kim Schulz 
+  &lt;kim@sslug.dk&gt;)</li>
+
+  <li>Der skal være et afsnit om installation og
+  distributionsspecifikke "ekstra" kilder, ala plf til Mandrake. Husk
+  at opdatere indledning.sgml</li>
+
+</ul></li>
+
+<!-- ---------------------------- -->
+<li>Introduktion til grafisk grænseflader<ul>
+
+  <li>Beskrivelsen af X opstart at håbløs for nybegyndere og slet ikke
+  på linie med hvordan de fleste distributioner starter X op i
+  dag. Beskrivelsen af hvad en window manager er kunne være meget
+  bedre.</li>
+
+  <li>Flere af beskrivelserne af window managers forklarer klodset
+  hvad en window manager er.</li>
+
+  <li>Der kunne være en strammere opdeling af window managere og
+  skrivebordsmiljøer.</li>
+
+</ul></li>
+
+<!-- ---------------------------- -->
+<li>Kontorprogrammer<ul>
+
+  <li>Skriv noget om egnede programmer til at skrive hjemmesider i.
+  IBM har noget kommercielt, og ellers er der <a
+  href="http://quanta.sourceforge.net/">Quanta</a>, <a
+  href="http://ftp.europeanservers.net/bluefish/downloads/?N=D">Bluefish</a></li>
+
+  <li>et godt program til at læse post via en webserver !!! -) Måske
+  nwebmail ? http://nwebmail.sourceforge.net/ eller IMP
+  http://horde.org/imp/ og Jawmail http://jawmail.sourceforge.net/
+  </li>
+
+  <li>aspell:
+  <pre>
 #!/bin/sh
 echo "Vælg ordbog (enter for dansk): "
 ls /usr/lib/aspell
 read ordbog
 exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
-</pre>
+  </pre>
+  </li>
+
+  <li>Alt om staroffice og openoffice skal gennemgås. Nye officesuiter
+  skal tilføjes. (koffice, andre?)</li>
+
+  <li>Skriv om <a href="http://www.gnomemeeting.org">Gnomemeeting</a> -
+  konkurrent til MS Netmeeting - nb, kontorprogram???</li>
+
+</ul></li>
+
+<!-- ---------------------------- -->
+<li>Lyd<ul>
+
+  <li>Lyd og bilede. Vi skal have præsenteret de mest generelle
+  afspillere først. Det vil sige sådan noget som xmms og KDE's
+  medieafspiller, samt gnomes medieafspiller. Senere kan de mere
+  specialiserede afspillere komme. Der er ingen grund til at vrøvle om
+  gamle underlige X programmer der har meget begrænset funktionalitet
+  til at starte med. Indledningen til afsnittet om tegneprogrammer og
+  grafikmanipulatorer skal skrives om. Skal det hedder
+  grafikmanipulatorer?</li>
+
+  <li>Ardour, hjemmeside: http://ardour.sourceforge.net/</li>
+
+  <li>Baudline, hjemmeside: http://www.baudline.com</li>
+
+  <li>cSound, hjemmeside: http://www.csound.org/</li>
+
+</ul></li>
+
+<!-- ---------------------------- -->
+<li>Grafik<ul>
+  <li>Blender?, http://www.blender.nl/</li>
+  <li>Compupic? Kommercielt (gratis til ikke kommercielt brug),
+  sjældent opdateret, men godt.</li>
+  <li>EndeavourII?</li>
+  <li>K-3D, hjemmeside: http://www.k-3d.com/</li>
+  <li>Maya, hjemmeside:
+  http://www.aliaswavefront.com/en/Home/homepage.html</li>
+</ul></li>
+
+<!-- ---------------------------- -->
+<li>Av<ul>
+  <li>Shake, Hjemmeside: http://www.nothingreal.com/</li>
+</ul></li>
+
+<!-- ---------------------------- -->
+<li>Spil<ul>
+  
+  <li>Frozen bobble og andre SDL spil</li>
+
+  <li>Quake 3, SOF, andre loki spil??? Hvis quake 2 skal være med,
+  så ... QuakeForge?</li>
+
+  <li>Spil skal deles op i Free Software games og
+  Kommercielle spil til Linux. Dernæst underopdeles i katagorier. Spil
+  til børn/programmer til børn.</li>
+
+  <li>Linux for kids har både spil og lærer redskaber.
+  http://linuxforkids.com/
+  </li>
+
+</ul></li>
+
+<!-- ---------------------------- -->
+<li>Andre Applikationer<ul>
+
+  <li>Kapitlet om applikationer (kapitel 2) starter med et afsnit om
+  programmeringsværktøjer. Ok, da. Det skal laves om. De programmer
+  man må antage "almindelige mennesker" vil ønske at bruge mest skal
+  placeres først. Strukturen skal laves enog meget om. Dette kapitel
+  skal måske helt stryges, eller omskrives til en kort introduktion
+  til hvilke software grupper der findes og vi anvender fremover. Et
+  eksempel: "3D-modellering" er under kapitel 2 - og, kapitel 6 hedder
+  "lyd og billede". Hurra. :-) Umiddelbart ser det ud til at kapitel 6
+  med fordel kunne flyttes op over det nuværende kapitel 4
+  (emulatorer).<br>
 </li>
 
-<li>Programmer der skal beskrives, lyd ting:
-<ul>
-<li>Ardour, hjemmeside: http://ardour.sourceforge.net/</li>
-<li>Baudline, hjemmeside: http://www.baudline.com</li>
-<li>cSound, hjemmeside: http://www.csound.org/</li>
-</ul>
-</li>
-
-<li>Programmer der skal beskrives, 3d, billede og video ting:
-<ul>
-<li>Blender?, http://www.blender.nl/</li>
-<li>Compupic? Kommercielt (gratis til ikke kommercielt brug), sjældent opdateret, men godt.</li>
-<li>EndeavourII?</li>
-<li>K-3D, hjemmeside: http://www.k-3d.com/</li>
-<li>Maya, hjemmeside:
-http://www.aliaswavefront.com/en/Home/homepage.html</li>
-<li>Shake, Hjemmeside: http://www.nothingreal.com/</li>
-</ul>
-</li>
-
-<li>Ting der <b>skal</b> opdateres.
-<ul>
-<li>Beskrivelsen af X opstart at håbløs for nybegyndere og slet ikke
-på linie med hvordan de fleste distributioner starter X op i
-dag. Beskrivelsen af hvad en window manager er kunne være meget bedre.</li>
-<li>Flere af beskrivelserne af window managers forklarer klodset hvad
-en window manager er.</li>
-<li>Der kunne være en strammere opdeling af window managere og
-skrivebordsmiljøer.</li>
-
-
-<li>Kapitlet om applikationer (kapitel 2) starter med et afsnit om
-programmeringsværktøjer. Ok, da. Det skal laves om. De programmer man
-må antage "almindelige mennesker" vil ønske at bruge mest skal
-placeres først. Strukturen skal laves enog meget om. Dette kapitel
-skal måske helt stryges, eller omskrives til en kort introduktion til
-hvilke software grupper der findes og vi anvender fremover. Et
-eksempel: "3D-modellering" er under kapitel 2 - og, kapitel 6 hedder
-"lyd og billede". Hurra. :-) Umiddelbart ser det ud til at kapitel 6
-med fordel kunne flyttes op over det nuværende kapitel 4
-(emulatorer).<br>
-Forslag til ny struktur:<br>
-- Kapitel 1, Introduktion til Linux's grafiske grænseflader
-- Kapitel 2, Webbrowsning, mail og kontorapplikationer
-- Kapitel 3, Tegneprogrammer og billedmanipulation
-- Kapitel 4, Lyd
-- Kapitel 5, Video og DVD
-- Kapitel 6, Brænding af CD'er
-- Kapitel 7, Spil
-- Kapitel 8, Emulatorer
-- Kapitel 9, Diverse programmer
-
-Materiale fra de eksisterende kapitler vil blive flyttet
-rundt/genbrugt. Klart forældede ting vil blive høvlet ud.
-</li>
+</ul></li>
 
 
 
-
-<li>Alt om staroffice og openoffice skal gennemgås. Nye officesuiter
-skal tilføjes. (koffice, andre?)</li>
-<li>Frozen bobble og andre SDL spil skal med i afsnittet om
-spil. Quake 3, SOF, andre loki spil??? Hvis quake 2 skal være med, så
-... QuakeForge? OK: Spil skal deles op i Free Software games og
-Kommercielle spil til Linux. Dernæst underopdeles i katagorier. Spil
-til børn/programmer til børn.</li>
-<li>Lyd og bilede. Vi skal have præsenteret de mest generelle
-afspillere først. Det vil sige sådan noget som xmms og KDE's
-medieafspiller, samt gnomes medieafspiller. Senere kan de mere
-specialiserede afspillere komme. Der er ingen grund til at vrøvle om
-gamle underlige X programmer der har meget begrænset funktionalitet
-til at starte med. Indledningen til afsnittet om tegneprogrammer og
-grafikmanipulatorer skal skrives om. Skal det hedder grafikmanipulatorer?</li>
-<li></li>
-<li></li>
-
-
-</ul>
-</li>
-
-<li>Listen af spil skal opdateres
-
-
-
-      <li>Kritisk gennemgang af det der skrives (kontakt: Kim Schulz 
-      &lt;kim@sslug.dk&gt;)</li>
 </ul>
 
 <!-- Text slut -->
