Ny indledning til GUI afsnittet, opdateret todo, opdateret indledning til hele bogen, rykket rundt på afsnittene i GUI afsnittet.

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -41,16 +41,29 @@
 <!-- ---------------------------- -->
 <li>Introduktion til grafisk grænseflader<ul>
 
-  <li>Beskrivelsen af X opstart at håbløs for nybegyndere og slet ikke
-  på linie med hvordan de fleste distributioner starter X op i
-  dag. Beskrivelsen af hvad en window manager er kunne være meget
-  bedre.</li>
+  <li>Der mangler screenshots af hvordan KDM og GDM ser ud til
+  indledningen.</li>
 
-  <li>Flere af beskrivelserne af window managers forklarer klodset
+  <li>Enkelte af beskrivelserne af window managers forklarer klodset
   hvad en window manager er.</li>
 
-  <li>Der kunne være en strammere opdeling af window managere og
-  skrivebordsmiljøer.</li>
+  <li>Gnome - Både RH8 og MDK9 har vist gnome 2, så mon ikke det er på
+  tide at rykke til dem? Eller hvad? Fjerne referencer til
+  f.eks. redhat 6.</li>
+
+  <li>KDE - det er ikke specielt professionelt at have
+  træk-og-slip... Finten om QT er irelevant. Mere om KDE3?</li>
+
+  <li>KDE og Gnome - det ville være lækkert at synche indholdet
+  lidt. Gnome delen snakker om CD afspilning og PIM'er, KDE har et
+  eksempel på at installere et link til Emacs og snakker en del om
+  KOffice og har den der private webserver. Hører det hjemme i den
+  præsentation? Jeg synes det ikke rigtigt.</li>
+
+  <li>WindowMaker - kan det ikke bare vælges fra et *DM session
+  login</li>
+ 
+  <li>Skal der være et avanceret afsnit om hvordan X starter op?</li>
 
 </ul></li>
 
