Rettet et par stavefejl.

--- a/web/todo.html
+++ b/web/todo.html
@@ -25,13 +25,13 @@
       <li>Kritisk gennemgang af det der skrives (kontakt: Kim Schulz
       &lt;kim@sslug.dk&gt;)</li>
 
-      <li>Java aplets i hjemmesider</li>
+      <li>Applets i hjemmesider</li>
 
-      <li>Java scrip i hjemmesider</li>
+      <li>JavaScript i hjemmesider</li>
 
-      <li>tomcat sammen med apache</li>
+      <li>Tomcat sammen med Apache</li>
 
-      <li>andre jave maskiner på web-serveren</li>
+      <li>Andre java-maskiner på web-serveren</li>
     </ul>
     <!-- Text slut -->
     <!--#include virtual="/includes/bottom.html" -->
