--- a/program/todo.html
+++ b/program/todo.html
@@ -54,7 +54,7 @@
 
       <li>Andre versionsstyringsværktøjer end CVS.</li>
 
-      <li><a href="http://libre.act-europe.fr/gvd">GNU Visual
+      <li><a href="http://libre.act-europe.fr/gvd/">GNU Visual
       Debugger</a>.</li>
 
       <li><a href=
