typo fra Frank Nørvig

--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -50,7 +50,7 @@
     <p>Vi har forslag til 
     <a href="http://cvs.sslug.dk/linuxbog/?t=TODO">hvad der skal laves</a>.</li>
 
-    <p>Har du fundet noget som skal laves op, så er det følgende det bedste
+    <p>Har du fundet noget som skal laves om, så er det følgende det bedste
     du kan gøre:</p>
 
     <ul>
