--- a/program/eksempler/hello.html
+++ b/program/eksempler/hello.html
@@ -1,4 +1,4 @@
-<html><head><title>hello - JavaScript</title></head>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <!--
   hello.html - JavaScript
   af Hans Schou <chlor@sslug.dk>
@@ -7,9 +7,14 @@
   Afvikling med Netscape eller lign.
   Åben filen hello.html
 -->
+<html>
+	<head>
+		<title>hello - JavaScript</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+	</head>
+	<body OnLoad="alert('Hello, world!')">
 
-<body OnLoad="alert('Hello, world!')">
+	<p>Her er almindelig HTML.</p>
 
-<tt>Her er almindelig HTML.</tt>
-
-</body></html>
+	</body>
+</html>
