--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -6,7 +6,7 @@
     "HTML Tidy for Linux/x86 (vers 1st May 2002), see www.w3.org">
     <!-- Husk titel. Skal begynde med "SSLUG - " -->
 
-    <title>SSLUG - Hvordan man hjælper med at forbedre
+    <title>Hvordan man hjælper med at forbedre
     linuxbog-bøgerne</title>
     <link rel="STYLESHEET" href="/style/sslug.css" type="text/css">
   </head>
@@ -26,13 +26,13 @@
 
     <ul>
       <li>Udgivelser på <a href=
-      "http://www.sslug.dk/linuxbog">http://www.sslug.dk/linuxbog</a>, som
+      "http://www.linuxbog.dk">http://www.linuxbog.dk</a>, som
       kan forventes at være i orden. Finder du et link eller en fil som ikke
       findes, så vil vi meget gerne vide dette. Der kommer nye versioner her
       ca. en gang per måned - måske hver anden måned :)</li>
 
       <li>Beta-versioner på <a href=
-      "http://cvs.sslug.dk/linuxbog">http://cvs.sslug.dk/linuxbog</a>, som
+      "http://cvs.linuxbog.dk">http://cvs.linuxbog.dk</a>, som
       ikke kan forventes at være i orden. Der kommer nye udgaver her hver
       morgen hvis en af forfatterne har bidraget med noget nyt.</li>
     </ul>
@@ -45,17 +45,17 @@
     <p>Bøgerne er skrevet i et sprog som hedder DocBook, der er en
     SGML-variant. Det minder en hel del om HTML, dvs. er tekstbaseret. Du kan
     læse mere om DocBook på <a href=
-    "http://www.sslug.dk/linuxbog/dokumentation/bog/">http://www.sslug.dk/linuxbog/dokumentation/bog/</a>.</p>
+    "http://www.linuxbog.dk/dokumentation/bog/">http://www.linuxbog.dk/dokumentation/bog/</a>.</p>
      
     <p>Vi har forslag til 
-    <a href="http://cvs.sslug.dk/linuxbog/?t=TODO">hvad der skal laves</a>.</li>
+    <a href="http://cvs.linuxbog.dk/?t=TODO">hvad der skal laves</a>.</li>
 
     <p>Har du fundet noget som skal laves om, så er det følgende det bedste
     du kan gøre:</p>
 
     <ul>
       <li>Find den SGML-fil, fejlen står i ved at søge efter linien fra bogen
-      på <a href="http://cvs.sslug.dk/linuxbog/search">denne URL</a>.</li>
+      på <a href="http://cvs.linuxbog.dk/search">denne URL</a>.</li>
 
       <li>Ret SGML-filen til så du synes det er godt. Det gør ikke så meget
       om du kommer til at ødelægge SGML-syntaksen. Skal du have et nyt
@@ -74,7 +74,7 @@
 
     <center>
       <p>Denne side vedligeholdes af Peter Toft (&lt;<a href=
-      "mailto:pto@sslug.dk">pto@sslug.dk</a>&gt;)</p>
+      "mailto:pto@linuxbog.dk">pto@linuxbog.dk</a>&gt;)</p>
     </center>
   </body>
 </html>
