--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -60,6 +60,9 @@
     webserver.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
+     href="wm">wm</a></font> - Se hvilken grafisk brugergrænseflade der passer til dig<br>
+     <font face=
+    "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
      href="sikkerhed">sikkerhed</a></font> - Kan ikke læses for tit hvis du
     har en maskine på nettet!<br>
      <font face=
